# mcp_sandbox

./: .gitignore  claude_desktop_config.json  requirements.txt
archived/weather_py/: README.md  pyproject.toml
archived/weather_service_from_202504/: README.md
archived/weather_service_from_202504/src/weather_service/: server.py
claude_code/: README.md
mcp-client-typescript/: index.ts  package-lock.json  package.json
read_local_dir/: README.md
read_notion/: README.md
search_web/: README.md
weather/: package-lock.json  package.json
weather/src/: index.ts
weather_service/: pyproject.toml
