[project]
name = "weather-service"
version = "0.1.0"
description = "A MCP server project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [ "mcp>=1.6.0",]
[[project.authors]]
name = "setsumaru1992"
email = "setsumaru1992@gmail.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
weather-service = "weather_service:main"
